fix alignments of buttons

--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ body {
 .keypad {
 	float: left;
     width: 280px;
-    margin-left: 15px;
+    margin-left: 25px;
     margin-right: 5px;
     height: 215px;
     margin-top: 8px;
@@ -63,8 +63,9 @@ body {
 }
 
 .clearer {
-	 width: 115px;
-    margin-left: 15px;
+	width: 115px;
+    margin-left: 0px;
+    margin-right: 20px;
     height: 35px;
 }
 
@@ -72,6 +73,6 @@ button {
 	 width: 45px;
     height: 35px;
     margin-top: 15px;
-    margin-left: 1.2px;
-    margin-right: 2px;;
+    margin-left: 0px;
+    margin-right: 2px;
 }
